--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
 </HEAD>
 
 <body>
-   <div class="menu">
-      <ul>
+   <div class="header-wrapper">
+      <ul class="menu">
          <li><a href="#">apps </a></li>
          <li><a href="#">profile </a></li>
          <li><a href="#">mail </a></li>
@@ -26,16 +26,16 @@
    
       
    </div>
-   <footer class="footer">
-      <ul>
+   <div class="footer">
+      <ul class="menu">
          <li><a href="#">apps </a></li>
          <li><a href="#">profile </a></li>
-         <li><a href="#">mail </a></li>
-         <li><a href="#">explore </a></li>
+         <li><a href="#">negocios </a></li>
+         <li><a href="#">publicidad </a></li>
       </ul>
 
 
-   </footer>
+   </div>
 
 </body>
 
